crates/ruff_python_parser/tests/snapshots/invalid_syntax@t_string_invalid_starred_expr.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/t_string_invalid_starred_expr.py
---
## AST

```
Module(
    ModModule {
        range: 0..112,
        body: [
            Expr(
                StmtExpr {
                    range: 77..83,
                    value: TString(
                        ExprTString {
                            range: 77..83,
                            value: TStringValue {
                                inner: Single(
                                    TString(
                                        TString {
                                            range: 77..83,
                                            elements: [
                                                Interpolation(
                                                    TStringInterpolationElement {
                                                        range: 79..82,
                                                        interpolation: Starred(
                                                            ExprStarred {
                                                                range: 80..81,
                                                                value: Name(
                                                                    ExprName {
                                                                        range: 81..81,
                                                                        id: Name(""),
                                                                        ctx: Invalid,
                                                                    },
                                                                ),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        debug_text: None,
                                                        conversion: None,
                                                        format_spec: None,
                                                    },
                                                ),
                                            ],
                                            flags: TStringFlags {
                                                quote_style: Double,
                                                prefix: Regular,
                                                triple_quoted: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 84..97,
                    value: TString(
                        ExprTString {
                            range: 84..97,
                            value: TStringValue {
                                inner: Single(
                                    TString(
                                        TString {
                                            range: 84..97,
                                            elements: [
                                                Interpolation(
                                                    TStringInterpolationElement {
                                                        range: 86..96,
                                                        interpolation: Starred(
                                                            ExprStarred {
                                                                range: 87..95,
                                                                value: BoolOp(
                                                                    ExprBoolOp {
                                                                        range: 88..95,
                                                                        op: And,
                                                                        values: [
                                                                            Name(
                                                                                ExprName {
                                                                                    range: 88..89,
                                                                                    id: Name("x"),
                                                                                    ctx: Load,
                                                                                },
                                                                            ),
                                                                            Name(
                                                                                ExprName {
                                                                                    range: 94..95,
                                                                                    id: Name("y"),
                                                                                    ctx: Load,
                                                                                },
                                                                            ),
                                                                        ],
                                                                    },
                                                                ),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        debug_text: None,
                                                        conversion: None,
                                                        format_spec: None,
                                                    },
                                                ),
                                            ],
                                            flags: TStringFlags {
                                                quote_style: Double,
                                                prefix: Regular,
                                                triple_quoted: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 98..111,
                    value: TString(
                        ExprTString {
                            range: 98..111,
                            value: TStringValue {
                                inner: Single(
                                    TString(
                                        TString {
                                            range: 98..111,
                                            elements: [
                                                Interpolation(
                                                    TStringInterpolationElement {
                                                        range: 100..110,
                                                        interpolation: Starred(
                                                            ExprStarred {
                                                                range: 101..109,
                                                                value: Yield(
                                                                    ExprYield {
                                                                        range: 102..109,
                                                                        value: Some(
                                                                            Name(
                                                                                ExprName {
                                                                                    range: 108..109,
                                                                                    id: Name("x"),
                                                                                    ctx: Load,
                                                                                },
                                                                            ),
                                                                        ),
                                                                    },
                                                                ),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        debug_text: None,
                                                        conversion: None,
                                                        format_spec: None,
                                                    },
                                                ),
                                            ],
                                            flags: TStringFlags {
                                                quote_style: Double,
                                                prefix: Regular,
                                                triple_quoted: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # Starred expression inside t-string has a minimum precedence of bitwise or.
2 | t"{*}"
  |     ^ Syntax Error: Expected an expression
3 | t"{*x and y}"
4 | t"{*yield x}"
  |


  |
1 | # Starred expression inside t-string has a minimum precedence of bitwise or.
2 | t"{*}"
3 | t"{*x and y}"
  |     ^^^^^^^ Syntax Error: Boolean expression cannot be used here
4 | t"{*yield x}"
  |


  |
2 | t"{*}"
3 | t"{*x and y}"
4 | t"{*yield x}"
  |     ^^^^^^^ Syntax Error: Yield expression cannot be used here
  |
